#156 fix buttons on small screens

--- a/app/scss/pages/_age-check.scss
+++ b/app/scss/pages/_age-check.scss
@@ -33,15 +33,18 @@
 }
 
 @media (max-width: 500px) {
+  .yoti-btns {
+    justify-content: space-between;
+}
   .margin-right{
-    margin-right: 0.25rem;
+    margin-right: 0.5rem;
   }
 .btns-small{
   padding: 0 !important;
   box-shadow: none !important;
   background-color: inherit !important;
   min-width: initial!important;//
-  max-width: 8rem!important;//
+  max-width: 9rem!important;//
    button{
     line-height: normal !important;
     height:auto !important;
@@ -51,7 +54,9 @@
       padding: 0.8rem 0 !important;
       border-radius: 2px;
       span{
-        font-size: 1.1rem; //
+        font-size: 0.9rem!important; //
+        padding-left: 0.75rem !important;
+        padding-right: 0.75rem !important;
       }
     }
 }
